--- a/exercicio.html
+++ b/exercicio.html
@@ -52,16 +52,15 @@
       box-sizing: border-box;
     }
 
-    /* ===== FOOTER ===== */
-    footer {
-      background: white;
-      color: #555;
-      text-align: center;
-      padding: 8px 0;
-      font-size: 0.85em;
-      box-shadow: 0 -2px 6px rgba(0,0,0,0.1);
-      transition: background-color 0.3s, color 0.3s;
-    }
+   /* ===== FOOTER ===== */
+footer {
+  background: white;
+  color: #555;
+  text-align: center;
+  padding: 8px 0;
+  font-size: 0.85em;
+  box-shadow: 0 -2px 6px rgba(0,0,0,0.1);
+}
 
     /* ===== Correção mobile ===== */
     @media (max-width: 768px) {
@@ -138,11 +137,11 @@
   <!-- Sidebar -->
   <aside>
     <nav>
-      <a href="index.html">🏠 Selecionar</a>
-      <a href="exercicio.html" class="active">📝 Exercícios</a>
-      <a href="jogo.html">🎮 Jogos</a>
-      <a href="#">ℹ Quem somos</a>
-    </nav>
+    <a href="index.html">📈 Selecionar</a>
+    <a href="exercicio.html">📝 Exercícios</a>
+    <a href="jogo.html">🎨 Jogos</a>
+    <a href="chat.html">💬 Chat</a>
+  </nav>
     <div class="mascote">🐻 Dimitry</div>
   </aside>
 
@@ -174,7 +173,7 @@
 
   <!-- Rodapé fixo -->
   <footer>
-    © 2025 Славянский клуб | Desenvolvido por Rafael Salles
+  	© 2025 Славянский клуб — Aprenda Russo e Português com diversão!
   </footer>
 
   <!-- Mascote Dimitri -->
