--- a/chat.html
+++ b/chat.html
@@ -178,19 +178,20 @@ body.dark .otherMsg { background: var(--color-msg-other-dark); }
   width: 300px;
   background: #f1f1f1;
   border-left: 1px dashed #ccc;
-  padding: 10px;
+  padding: 8px 0;
   text-align: center;
   overflow: auto;
 }
 
+/* ===== FOOTER ===== */
 footer {
-  background: var(--color-primary);
-  color:white;
-  text-align:center;
-  padding:10px;
-  font-size:1em;
+  background: white;
+  color: #555;
+  text-align: center;
+  padding: 8px 0;
+  font-size: 0.85em;
+  box-shadow: 0 -2px 6px rgba(0,0,0,0.1);
 }
-
 /* MOBILE */
 @media(max-width:768px){
   #mainContent { flex-direction: column; }
