--- a/chat.html
+++ b/chat.html
@@ -81,8 +81,8 @@ header h1 {
 }
 
 #topBar button {
-  background: var(--color-primary);
-  color: white;
+  background: white;
+  color: var(--color-primary);
   border: none;
   padding: 10px 14px;
   border-radius: 5px;
@@ -113,7 +113,7 @@ body.dark #topBar span { color: var(--color-text-dark); }
   flex-direction: column;
   flex: 1;
   min-height: 0;
-  border: 2px solid var(--color-primary);
+  border: 1px solid var(--color-primary);
   border-radius: 0;
   background: white;
   overflow: hidden;
@@ -160,8 +160,8 @@ body.dark #topBar span { color: var(--color-text-dark); }
 }
 
 #chatInput button {
-  background: var(--color-primary);
-  color:white;
+  background: white;
+  color:var(--color-primary);
   border:none;
   padding:12px 18px;
   cursor:pointer;
