--- a/chat.html
+++ b/chat.html
@@ -23,153 +23,153 @@
 
 html, body {
   height: 100%;
-  overflow: hidden;
   font-family: Arial, sans-serif;
+  background: var(--color-bg-light);
 }
 
-/* ===== HEADER ===== */
+/* HEADER */
+header {
+  background:#fff;
+  padding:10px;
+  border-bottom:1px solid #ddd;
+}
 header h1 {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  font-size: 1.5em;
+  display:flex;
+  align-items:center;
+  gap:8px;
   color: var(--color-primary);
-  margin: 0;
-  padding: 10px;
-  background: #fff;
 }
-.emoji-head {
-  width: 32px;
-  height: 32px;
-  vertical-align: middle;
-}
+.emoji-head { width:32px; height:32px; vertical-align:middle; }
 
-/* ===== TOPO ===== */
+/* TOPBAR */
 #topBar {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  padding: 8px;
-  background: #fafafa;
-  border-bottom: 1px solid #ddd;
-  flex-wrap: wrap;
-  z-index: 10;
+  display:flex;
+  align-items:center;
+  gap:8px;
+  padding:6px 10px;
+  background:#fafafa;
+  border-bottom:1px solid #ddd;
+  overflow-x:auto;
 }
 #topBar button {
-  background: white;
-  color: var(--color-primary);
-  border: 1px solid var(--color-primary);
-  padding: 6px 10px;
-  border-radius: 5px;
-  cursor: pointer;
+  background:white;
+  color:var(--color-primary);
+  border:1px solid var(--color-primary);
+  padding:6px 10px;
+  border-radius:5px;
+  cursor:pointer;
+  flex-shrink:0;
 }
-#topBar span { font-size: 0.9em; }
+#topBar span { font-size:0.9em; flex-shrink:0; }
 
-/* ===== LAYOUT ===== */
+/* MAIN CONTENT */
 #mainContent {
-  display: flex;
-  height: calc(100% - 110px);
-  overflow: hidden;
+  display:flex;
+  flex:1;
+  overflow:hidden;
+  height: calc(100vh - 108px); /* header + topbar */
 }
 
-/* ==== Usuários ==== */
+/* USER LIST */
 #userList {
-  width: 200px;
-  background: #fff;
-  border-right: 1px solid #ddd;
-  overflow-y: auto;
-  padding: 8px;
+  width:200px;
+  background:#fff;
+  border-right:1px solid #ddd;
+  overflow-y:auto;
+  padding:8px;
 }
 .userItem {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  margin-bottom: 6px;
-  cursor: pointer;
-  padding: 6px;
-  border-radius: 5px;
+  display:flex;
+  align-items:center;
+  gap:6px;
+  margin-bottom:6px;
+  cursor:pointer;
+  padding:6px;
+  border-radius:5px;
 }
-.userItem:hover { background: #e0f7e9; }
-.userItem img { width: 28px; height: 28px; border-radius: 50%; }
+.userItem:hover { background:#e0f7e9; }
+.userItem img { width:28px; height:28px; border-radius:50%; }
 
-/* ==== Chat ==== */
+/* CHAT */
 #chatContainer {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  overflow: hidden;
+  flex:1;
+  display:flex;
+  flex-direction:column;
+  overflow:hidden;
 }
-
 #chatWindow {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  overflow-y: auto;
-  background: white;
-  padding: 10px;
+  flex:1;
+  overflow-y:auto;
+  padding:10px;
+  background:white;
 }
-
 .msg {
-  margin: 5px 0;
-  padding: 8px;
-  border-radius: 8px;
-  max-width: 80%;
-  word-wrap: break-word;
+  margin:5px 0;
+  padding:8px;
+  border-radius:8px;
+  max-width:80%;
+  word-wrap:break-word;
 }
-.userMsg { background: #e0f7e9; align-self: flex-end; }
-.otherMsg { background: #fff8dc; align-self: flex-start; }
+.userMsg { background:#e0f7e9; align-self:flex-end; }
+.otherMsg { background:#fff8dc; align-self:flex-start; }
 
+/* CHAT INPUT */
 #chatInput {
-  display: flex;
-  border-top: 1px solid #ddd;
-  background: white;
+  display:flex;
+  border-top:1px solid #ddd;
+  background:white;
+  padding:4px;
 }
 #chatInput input {
-  flex: 1;
-  border: none;
-  padding: 10px;
-  font-size: 1em;
+  flex:1;
+  padding:10px;
+  font-size:1em;
+  border:1px solid #ccc;
+  border-radius:5px;
 }
 #chatInput button {
-  background: var(--color-primary);
-  color: white;
-  border: none;
-  padding: 10px 14px;
-  cursor: pointer;
+  background:var(--color-primary);
+  color:white;
+  border:none;
+  padding:10px 14px;
+  margin-left:4px;
+  border-radius:5px;
+  cursor:pointer;
 }
-#chatInput button:hover { background: var(--color-primary-hover); }
+#chatInput button:hover { background:var(--color-primary-hover); }
 
-/* ==== Ads ==== */
+/* ADS */
 #adSidebar {
-  width: 280px;
-  background: #f1f1f1;
-  border-left: 1px dashed #ccc;
-  padding: 8px;
-  text-align: center;
-  overflow-y: auto;
+  width:280px;
+  background:#f1f1f1;
+  border-left:1px dashed #ccc;
+  padding:8px;
+  text-align:center;
+  overflow-y:auto;
 }
 
-/* ==== Footer ==== */
+/* FOOTER */
 footer {
-  background: white;
-  color: #555;
-  text-align: center;
-  padding: 6px;
-  font-size: 0.85em;
-  box-shadow: 0 -2px 6px rgba(0,0,0,0.1);
+  background:white;
+  color:#555;
+  text-align:center;
+  padding:6px;
+  font-size:0.85em;
+  border-top:1px solid #ddd;
 }
 
-/* ==== Mobile ==== */
+/* MOBILE */
 @media(max-width:768px){
-  #mainContent { flex-direction: column; }
+  #mainContent { flex-direction:column; height: calc(100vh - 108px); }
   #userList, #adSidebar { display:none; }
-  #chatContainer { flex:1; height:100%; }
-  #chatWindow { height: calc(100vh - 160px); }
-  html, body { height: 100%; overflow: hidden; }
+  #chatWindow { flex:1; overflow-y:auto; }
+  #chatInput { position:fixed; bottom:40px; left:0; right:0; padding:4px; background:white; z-index:50; }
+  footer { position:fixed; bottom:0; left:0; right:0; }
+  html, body { overflow:hidden; }
+  #topBar { position:fixed; top:52px; left:0; right:0; z-index:100; }
 }
 </style>
 </head>
-
 <body>
 <header>
   <h1>Славянский клуб <img src="emoji_dimitry.png" alt="Dimitry" class="emoji-head"></h1>
@@ -189,7 +189,6 @@ footer {
 
   <div id="chatContainer">
     <div id="chatWindow"></div>
-
     <div id="chatInput">
       <input type="text" id="msgInput" placeholder="Digite sua mensagem..." disabled>
       <button id="sendBtn" disabled>Enviar</button>
@@ -202,6 +201,7 @@ footer {
 <footer>© 2025 Славянский клуб — Aprenda Russo e Português com diversão!</footer>
 
 <script>
+// Firebase config
 const firebaseConfig = {
   apiKey: "AIzaSyCYJCgfil5HKrCWtB14zwdicDaEcldHU6A",
   authDomain: "dimitry-rusian.firebaseapp.com",
@@ -215,7 +215,6 @@ firebase.initializeApp(firebaseConfig);
 
 const auth = firebase.auth();
 const db = firebase.database();
-
 const loginBtn = document.getElementById("loginBtn");
 const logoutBtn = document.getElementById("logoutBtn");
 const msgInput = document.getElementById("msgInput");
@@ -225,103 +224,88 @@ const userList = document.getElementById("userList");
 const alertaLogin = document.getElementById("alertaLogin");
 const onlineCount = document.getElementById("onlineCount");
 const generalBtn = document.getElementById("generalBtn");
-
 let currentChat = "global";
 
 // Login/logout
-loginBtn.onclick = () => {
-  const provider = new firebase.auth.GoogleAuthProvider();
-  auth.signInWithPopup(provider);
-};
-logoutBtn.onclick = () => auth.signOut();
+loginBtn.onclick = ()=> auth.signInWithPopup(new firebase.auth.GoogleAuthProvider());
+logoutBtn.onclick = ()=> auth.signOut();
 
-auth.onAuthStateChanged(user => {
-  if (user) {
-    loginBtn.style.display = "none";
-    logoutBtn.style.display = "inline-block";
-    alertaLogin.style.display = "none";
-    msgInput.disabled = false;
-    sendBtn.disabled = false;
-    db.ref("online/" + user.uid).set({
-      name: user.displayName,
-      photo: user.photoURL
-    });
-    db.ref("online/" + user.uid).onDisconnect().remove();
-  } else {
-    loginBtn.style.display = "inline-block";
-    logoutBtn.style.display = "none";
-    alertaLogin.style.display = "inline-block";
-    msgInput.disabled = true;
-    sendBtn.disabled = true;
+// Estado do usuário
+auth.onAuthStateChanged(user=>{
+  if(user){
+    loginBtn.style.display="none";
+    logoutBtn.style.display="inline-block";
+    alertaLogin.style.display="none";
+    msgInput.disabled=false;
+    sendBtn.disabled=false;
+    db.ref("online/"+user.uid).set({name:user.displayName,photo:user.photoURL});
+    db.ref("online/"+user.uid).onDisconnect().remove();
+  } else{
+    loginBtn.style.display="inline-block";
+    logoutBtn.style.display="none";
+    alertaLogin.style.display="inline-block";
+    msgInput.disabled=true;
+    sendBtn.disabled=true;
   }
 });
 
-// Mostrar usuários online
-db.ref("online").on("value", snap => {
-  userList.innerHTML = "";
-  const users = snap.val() || {};
-  onlineCount.textContent = `👥 Usuários online: ${Object.keys(users).length}`;
-  for (const [uid, u] of Object.entries(users)) {
+// Usuários online
+db.ref("online").on("value", snap=>{
+  userList.innerHTML="";
+  const users = snap.val()||{};
+  onlineCount.textContent=`👥 Usuários online: ${Object.keys(users).length}`;
+  for(const [uid,u] of Object.entries(users)){
     const div = document.createElement("div");
-    div.className = "userItem";
-    div.innerHTML = `<img src="${u.photo || "https://cdn-icons-png.flaticon.com/512/847/847969.png"}"><span>${u.name}</span>`;
-    div.onclick = () => openPrivateChat(uid, u.name);
+    div.className="userItem";
+    div.innerHTML=`<img src="${u.photo||'https://cdn-icons-png.flaticon.com/512/847/847969.png'}"><span>${u.name}</span>`;
+    div.onclick=()=> openPrivateChat(uid,u.name);
     userList.appendChild(div);
   }
 });
 
 // Enviar mensagem
 sendBtn.onclick = sendMessage;
-msgInput.addEventListener("keypress", e => {
-  if (e.key === "Enter") sendMessage();
-});
+msgInput.addEventListener("keypress",e=>{if(e.key==="Enter")sendMessage();});
 
-function sendMessage() {
-  const text = msgInput.value.trim();
-  const user = auth.currentUser;
-  if (!text || !user) return;
-  const path = currentChat === "global" ? "chatGlobal" : "private/" + currentChat;
-  db.ref(path).push({
-    user: user.displayName,
-    photo: user.photoURL,
-    text,
-    timestamp: Date.now()
-  });
-  msgInput.value = "";
+function sendMessage(){
+  const text=msgInput.value.trim();
+  const user=auth.currentUser;
+  if(!text||!user)return;
+  const path=currentChat==="global"?"chatGlobal":"private/"+currentChat;
+  db.ref(path).push({user:user.displayName,photo:user.photoURL,text,timestamp:Date.now()});
+  msgInput.value="";
 }
 
 // Receber mensagens
-db.ref("chatGlobal").on("child_added", snap => showMessage(snap.val(), "chatGlobal"));
+db.ref("chatGlobal").on("child_added",snap=>showMessage(snap.val(),"chatGlobal"));
 
-function showMessage(msg, room) {
-  if (room !== "chatGlobal" && room !== currentChat) return;
-  const div = document.createElement("div");
-  div.className = msg.user === auth.currentUser?.displayName ? "msg userMsg" : "msg otherMsg";
-  div.textContent = `${msg.user}: ${msg.text}`;
+function showMessage(msg,room){
+  if(room!=="chatGlobal"&&room!==currentChat)return;
+  const div=document.createElement("div");
+  div.className=msg.user===auth.currentUser?.displayName?"msg userMsg":"msg otherMsg";
+  div.textContent=`${msg.user}: ${msg.text}`;
   chatWindow.appendChild(div);
-  chatWindow.scrollTop = chatWindow.scrollHeight;
+  chatWindow.scrollTop=chatWindow.scrollHeight;
 }
 
 // Chat privado
-function openPrivateChat(uid, name) {
-  if (!auth.currentUser) return alert("Faça login para conversar.");
-  if (uid === auth.currentUser.uid) return;
-  if (!confirm(`Deseja enviar um pedido de conversa privada para ${name}?`)) return;
-  currentChat = [auth.currentUser.uid, uid].sort().join("_");
-  chatWindow.innerHTML = `<div style='text-align:center;margin:10px;color:#555;'>💬 Conversa privada com ${name}</div>`;
-  generalBtn.style.display = "inline-block";
-  db.ref("private/" + currentChat).off();
-  db.ref("private/" + currentChat).on("child_added", s => showMessage(s.val(), currentChat));
+function openPrivateChat(uid,name){
+  if(!auth.currentUser)return alert("Faça login para conversar.");
+  if(uid===auth.currentUser.uid)return;
+  if(!confirm(`Deseja enviar um pedido de conversa privada para ${name}?`))return;
+  currentChat=[auth.currentUser.uid,uid].sort().join("_");
+  chatWindow.innerHTML=`<div style='text-align:center;margin:10px;color:#555;'>💬 Conversa privada com ${name}</div>`;
+  generalBtn.style.display="inline-block";
+  db.ref("private/"+currentChat).off();
+  db.ref("private/"+currentChat).on("child_added",s=>showMessage(s.val(),currentChat));
 }
 
 // Voltar ao chat geral
-generalBtn.onclick = () => {
-  currentChat = "global";
-  chatWindow.innerHTML = "";
-  db.ref("chatGlobal").once("value", s => {
-    s.forEach(m => showMessage(m.val(), "chatGlobal"));
-  });
-  generalBtn.style.display = "none";
+generalBtn.onclick=()=>{
+  currentChat="global";
+  chatWindow.innerHTML="";
+  db.ref("chatGlobal").once("value",s=>{s.forEach(m=>showMessage(m.val(),"chatGlobal"));});
+  generalBtn.style.display="none";
 };
 </script>
 </body>
